Prevent wrapping of BOM counters

--- a/public/stylesheets/contents/item.css
+++ b/public/stylesheets/contents/item.css
@@ -387,8 +387,11 @@
     flex-grow       : 1;
     height          : 20px;
     line-height     : 20px;
+    overflow        : hidden;
     padding         : 2px 4px;
     text-align      : center;
+    text-overflow   : ellipsis;
+    white-space     : nowrap;
     width           : 25%;
 }
 .no-bom-counters .bom-content {
